Build: 252	Version: 2.4	Branch: Master

	* README.md: File updated.